--- a/03-lection1/02-accordion/accordion.css
+++ b/03-lection1/02-accordion/accordion.css
@@ -1,1 +1,49 @@
-/* Стилизация аккордеона */
+@import '/assets/css/main.css';
+
+.accordion__item {
+    border: solid 1px;
+    border-color: var(--grey-3);
+    padding: 20px;
+    border-radius: 8px;
+    margin-bottom: 8px;
+}
+
+.accordion__item[open] {
+    box-shadow: 0 2px 5px 0 var(--grey-3);
+}
+
+/* This works only one time */
+.accordion__item[open] .accordion__item__summary~* {
+    animation: sweep .5s ease-in-out;
+}
+
+@keyframes sweep {
+    0% {
+        opacity: 0;
+        transform: translateX(-10px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+/*  */
+.accordion__item:last-child {
+    margin-bottom: 0;
+}
+
+.accordion__item__summary {
+    list-style-type: none;
+    font-size: 16px;
+    color: var(--grey-4);
+}
+
+.accordion__item__summary:focus {
+    color: black;
+}
+
+.accordion__item__text {
+    font-size: 16px;
+    color: var(--grey-4)
+}
